[gd_scene load_steps=6 format=3 uid="uid://ci4lgflduc3hq"]

[ext_resource type="Script" path="res://PlayingBetter.gd" id="1_ytmw1"]
[ext_resource type="PackedScene" uid="uid://c6jjwbvxya6kn" path="res://card_container.tscn" id="2_fyyye"]
[ext_resource type="PackedScene" uid="uid://c61e0lq7rt214" path="res://Playing/MakeTrumpPhase1.tscn" id="3_semkh"]
[ext_resource type="PackedScene" uid="uid://1hxufhkkq5me" path="res://Playing/MakeTrumpPhase2.tscn" id="4_x3xkl"]
[ext_resource type="PackedScene" uid="uid://ckyi87r6802ke" path="res://dealer_chip.tscn" id="5_hi3lt"]

[node name="PlayingBetter" type="Node2D"]
script = ExtResource("1_ytmw1")
card_scene = ExtResource("2_fyyye")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MakeTrumpPhase1" parent="." instance=ExtResource("3_semkh")]
offset_left = 488.0
offset_top = 369.0
offset_right = 488.0
offset_bottom = 369.0

[node name="MakeTrumpPhase2" parent="." instance=ExtResource("4_x3xkl")]
visible = false
offset_left = 484.0
offset_top = 338.0
offset_right = 484.0
offset_bottom = 338.0

[node name="HintLabel" type="Label" parent="."]
offset_left = 785.0
offset_top = 607.0
offset_right = 963.0
offset_bottom = 639.0
text = "HINT LABEL"

[node name="DealerChip" parent="." instance=ExtResource("5_hi3lt")]
position = Vector2(873, 309)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="OrderUp" from="MakeTrumpPhase1" to="." method="_on_make_trump_phase_1_order_up"]
[connection signal="Pass" from="MakeTrumpPhase1" to="." method="_on_make_trump_phase_1_pass"]
[connection signal="clubs_signal" from="MakeTrumpPhase2" to="." method="_on_make_trump_phase_2_clubs_signal"]
[connection signal="diamonds_signal" from="MakeTrumpPhase2" to="." method="_on_make_trump_phase_2_diamonds_signal"]
[connection signal="hearts_signal" from="MakeTrumpPhase2" to="." method="_on_make_trump_phase_2_hearts_signal"]
[connection signal="pass_signal" from="MakeTrumpPhase2" to="." method="_on_make_trump_phase_2_pass_signal"]
[connection signal="spades_signal" from="MakeTrumpPhase2" to="." method="_on_make_trump_phase_2_spades_signal"]
